@@ -1,3 +1,6 @@
+* Added zoom support with keybindings (erikos)
+* Added a view toolbar for fullscreen/tray/zoom (erikos)
+* Make outline of the session bookmarks smaller (erikos)
 * Use favorite icon for session bookmark and call it Bookmark #3741 (erikos)
 
 70
